fix: changed font color  and spacing of rsvp

--- a/styles.css
+++ b/styles.css
@@ -418,10 +418,10 @@ li {
 		font-size: 30px;
 	}
 	.rsvp{
-		width: 70%;
+		width: 80%;
 	}
 	.name-input{
-		width: 65%;
+		width: 55%;
 	}
 }
 
